# brainstate

./: .gitignore  README.md  changelog.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
brainstate/: __init__.py  _module.py  _module_test.py  _random_for_unit.py  _state.py  _state_test.py  _utils.py  _visualization.py  environ.py  environ_test.py  mixin.py  mixin_test.py  random.py  random_test.py  surrogate.py  typing.py  util.py
brainstate/functional/: __init__.py  _activations.py  _activations_test.py  _normalization.py  _others.py  _spikes.py
brainstate/init/: _generic.py  _random_inits.py  _regular_inits.py
brainstate/math/: __init__.py  _einops.py  _einops_parsing.py  _einops_parsing_test.py  _einops_test.py  _misc.py  _misc_test.py
brainstate/nn/: __init__.py  _base.py  _connections.py  _dynamics.py  _elementwise.py  _embedding.py  _misc.py  _normalizations.py  _others.py  _poolings.py  _poolings_test.py  _rate_rnns.py  _readout.py  _synouts.py  metrics.py
brainstate/optim/: __init__.py  _lr_scheduler.py  _lr_scheduler_test.py  _optax_optimizer.py  _sgd_optimizer.py
brainstate/random/: _rand_funs.py  _rand_seed.py  _rand_state.py
brainstate/transform/: __init__.py  _autograd.py  _autograd_test.py  _conditions.py  _conditions_test.py  _control.py  _controls_test.py  _error_if.py  _error_if_test.py  _jit.py  _jit_error.py  _jit_error_test.py  _jit_test.py  _loop_collect_return.py  _loop_no_collection.py  _loops.py  _make_jaxpr.py  _make_jaxpr_test.py  _mapping.py  _progress_bar.py  _unvmap.py
docs/: api.rst  auto_generater.py  conf.py  index.rst
docs/apis/: braincore.rst  brainstate.functional.rst  brainstate.nn.rst  brainstate.rst  changelog.md  init.rst  math.rst  mixin.rst  optim.rst  random.rst  surrogate.rst  (+3 more)
examples/: hh_neuron_model.py
(+17 files in other folders)
