[build-system]
requires = ["setuptools", "numpy", 'jax', 'jaxlib']
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "examples*", "experiments*", "build*", "dist*",
    "braincore.egg-info*", "braincore/__pycache__*",
    "braincore/__init__.py"]


[tool.distutils.bdist_wheel]
universal = true


[project]
name = "braincore"
description = "The Core System for General-purpose Brain Dynamics Programming Framework."
readme = 'README.md'
license = { text = 'Apache-2.0 license' }
requires-python = '>=3.9'
authors = [{ name = 'BrainPy Team', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]


keywords = ["brainpy", "brain simulation", "brain-inspired computing"]

dependencies = [
    'jax',
    'jaxlib',
    'numpy',
]

dynamic = ['version']

[tool.flit.module]
name = "braincore"

[project.urls]
homepage = 'http://github.com/brainpy'
repository = 'http://github.com/brainpy/braincore'

[project.optional-dependencies]
testing = [
    'pytest',
]
